(lang dune 2.7)

(name mithril)

(formatting disabled)

(generate_opam_files true)

(source
 (github ocurrent/jsoo-mithril))

(authors "pf341@patricoferris.com")

(maintainers "pf341@patricoferris.com")

(documentation "https://github.com/patricoferris/jsoo-mithril")

(package
 (name mithril)
 (synopsis "Js_of_ocaml bindings for MithrilJS")
 (depends brr))
(using mdx 0.1)
